<resources>
    <string name="app_name">JoyStar</string>

    <!-- 自定义组件 -->
    <string name="pull_to_refresh">下拉可以刷新</string>
    <string name="release_to_refresh">松开可以刷新</string>
    <string name="lastUpdateTime">最近更新：%s</string>
    <string name="load_full">已加载全部</string>
    <string name="no_data">暂无数据</string>
    <string name="more">加载中</string>
    <!-- 消除警告，可忽略 -->
    <string name="d">图片描述</string>


    <string name="setup">设置</string>
    <string name="qzone">我的空间</string>
    <string name="country">国家</string>
    <string name="type">类型</string>
    <string name="industry">行业</string>
    <string name="language">语言</string>
    <string name="modifiypassword">修改密码</string>
    <string name="logout">退出</string>
    <string name="version">版本</string>
    <string name="cache">缓存</string>
    <string name="profile">个人资料</string>
    <string name="foegetpassword">忘记密码</string>
    <string name="register">注册</string>
    <string name="errphone">手机号码有误</string>
    <string name="edtcode">请输入验证码</string>
    <string name="edtpassword">请输入大于8位数的登录密码</string>
    <string name="edtname">请输入昵称</string>
    <string name="Serverexception">服务器异常</string>
    <string name="title_activity_right_img">RightImgActivity</string>
    <string name="plaselogin">请先登录!</string>
    <string name="Staytunedfor">敬请期待</string>

    <string name="Discussiongroups">讨论组</string>
    <string name="entercomments">请输入评论！</string>
    <string name="In_left">还剩</string>
    <string name="seconds">秒</string>
    <string name="Again_send">重新发送</string>
    <string name="Get_code">获取验证码</string>
    <string name="not_save">还没有保存哦？再点两次退出！</string>
    <string name="Modify_name">修改姓名</string>
    <string name="Modify_nickname">修改昵称</string>
    <string name="Modify_country">修改国家</string>
    <string name="Modify_professional">修改职业</string>
    <string name="Modify_label">修改标签</string>
    <string name="Two_more_exits">还没有保存哦？再点两次退出！</string>
    <string name="picture">  图片</string>
    <string name="confirm">确定</string>
    <string name="none">原图</string>
    <string name="beauty">美颜</string>
    <string name="village">乡村</string>
    <string name="elegance">优雅</string>
    <string name="afternoon">午后</string>
    <string name="mint">薄荷</string>
    <string name="moon">月光</string>
    <string name="gray">灰</string>
    <string name="fading">褪色</string>
    <string name="sketch">素描</string>
    <string name="dodge">减淡</string>
    <string name="relief">浮雕</string>
    <string name="cartoon">卡通</string>
    <string name="comments">评论</string>
    <string name="input_comments">请输入评论内容...</string>
    <string name="upload">上传</string>
    <string name="select_upload">请选择内容在上传</string>
    <string name="commentsd">个评论</string>
    <string name="thumb_up">个点赞</string>
    <string name="Login">登录</string>
    <string name="Input_comments">输入评论</string>
    <string name="send">发送</string>
    <string name="phone">手机号码</string>
    <string name="Verification_code">验证码</string>
    <string name="new_password">新密码</string>
    <string name="loginpassword">登录密码</string>
    <string name="phones">手机号码：</string>
    <string name="Verification_codes">验证码：</string>
    <string name="new_passwords">新密码：</string>
    <string name="enter_new_password">请输入新密码</string>
    <string name="Head_portrait">头像</string>
    <string name="name">姓名</string>
    <string name="nickname">昵称</string>
    <string name="phone_no">手机号</string>
    <string name="professional">职业</string>
    <string name="label">标签</string>
    <string name="Please_enter">请输入</string>
    <string name="articl_content">文章内容</string>
    <string name="like">点赞</string>
    <string name="comment">评论</string>
    <string name="shared">分享</string>
    <string name="platforms">平台</string>
    <string name="likes">点击数</string>
    <string name="fans">粉丝</string>
    <string name="your_today">今天你有什么故事？</string>
    <string name="names">姓名:</string>
    <string name="Focus">关注</string>
    <string name="publics">公开</string>
    <string name="Say_something">说点什么....</string>
    <string name="unsubscribe">取消订阅</string>
    <string name="share_information">分享资料</string>
    <string name="Share_thegallery">分享画廊</string>
    <string name="Sharing_about">分享关于</string>
    <string name="save">保存</string>
    <string name="Input_state">输入国家</string>
    <string name="Enter_industry">输入行业</string>
    <string name="Input_type">输入类型</string>
    <string name="camera">相机</string>
    <string name="Photo_album">相册</string>
    <string name="cancel">取消</string>
    <string name="Are_you_sure_to_quit">确认退出吗？</string>
    <string name="errvoide">视频错误</string>
    <!--<string name="....">....</string>-->
    <!--<string name="....">....</string>-->
    <!--<string name="....">....</string>-->


</resources>
