<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="@dimen/home_topsize"
        android:orientation="vertical">


        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:src="@mipmap/arrow_on" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/country"
                android:textColor="@color/color_White"
                android:textSize="15dp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:background="@drawable/bg_edittext_normalgg2"
                android:hint="@string/Input_state"
                android:paddingLeft="5dp"
                android:textColor="@color/color_White"
                android:textColorHint="@color/color_White"
                android:textSize="15dp" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/industry"
                android:textColor="@color/color_White"
                android:textSize="15dp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:background="@drawable/bg_edittext_normalgg2"
                android:hint="@string/Enter_industry"
                android:paddingLeft="5dp"
                android:textColor="@color/color_White"
                android:textColorHint="@color/color_White"
                android:textSize="15dp" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/type"
                android:textColor="@color/color_White"
                android:textSize="15dp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:background="@drawable/bg_edittext_normalgg2"
                android:hint="@string/Input_type"
                android:paddingLeft="5dp"
                android:textColor="@color/color_White"
                android:textColorHint="@color/color_White"
                android:textSize="15dp" />


        </LinearLayout>


    </LinearLayout>


</LinearLayout>
