<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:orientation="vertical"
        android:background="@drawable/bg_edittext_normalww"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:gravity="center"
            android:textColor="@color/color_setupline"
            android:id="@+id/camera"
            android:text="@string/camera"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/color_line"></View>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:gravity="center"
            android:id="@+id/Photoalbum"
            android:textColor="@color/color_setupline"
            android:text="@string/Photo_album"
            />




    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:gravity="center"
        android:layout_marginTop="10dp"

        android:textColor="@color/color_Blackfont"
        android:background="@drawable/bg_edittext_normalww"
        android:text="@string/cancel"
        android:id="@+id/cancel"
        />

</LinearLayout>
