<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_forget_password"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@mipmap/setupbg"
    tools:context="com.erbao.joystar.moudule.start.activity.ForgetPasswordActivity">

    <include layout="@layout/handview1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"></include>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:layout_marginTop="50dp"
        >

    <EditText
        android:layout_width="match_parent"
        android:layout_height="@dimen/lin_size"
        android:background="@drawable/bg_edittext_normalww"
        android:hint="@string/phone"
        android:paddingLeft="10dp"
        android:inputType="number"
        android:textSize="15dp"
        android:id="@+id/forgetpass_phone"
        android:textColor="@color/color_Blackfont"
        android:textColorHint="@color/color_Gray2"
        />

<LinearLayout
    android:layout_width="match_parent"
    android:layout_marginTop="10dp"
    android:orientation="horizontal"
    android:background="@drawable/bg_edittext_normalww"
    android:id="@+id/forgetpass_lin"
    android:layout_height="@dimen/lin_size">
    <EditText
        android:layout_width="match_parent"
        android:layout_height="@dimen/lin_size"
        android:hint="@string/Verification_code"
        android:inputType="number"
        android:paddingLeft="10dp"
        android:layout_weight="1"
        android:textSize="15dp"
        android:textColor="@color/color_Blackfont"
        android:background="@null"
        android:id="@+id/forgetpass_code"
        android:textColorHint="@color/color_Gray2"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_weight="2"
        android:layout_height="match_parent"
        android:textColor="@color/color_White"
        android:id="@+id/forgetpass_getcode"
        android:textSize="15dp"
        android:gravity="center"
        android:background="@color/color_setupline"
        android:text="@string/Get_code"
        />
</LinearLayout>


        <EditText
            android:layout_width="match_parent"
            android:layout_height="@dimen/lin_size"
            android:background="@drawable/bg_edittext_normalww"
            android:hint="@string/new_password"
            android:paddingLeft="10dp"
            android:id="@+id/forgetpass_passwork"
            android:textSize="15dp"
            android:layout_marginTop="10dp"
            android:textColor="@color/color_Blackfont"
            android:textColorHint="@color/color_Gray2"
            />




        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/lin_size"
            android:text="@string/confirm"
            android:textColor="@color/color_White"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:id="@+id/forgetpass_comple"
            android:background="@drawable/bg_edittext_normalll"
            />



    </LinearLayout>
</LinearLayout>
