<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_modifypassword"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/setupbg"
    android:orientation="vertical"
    tools:context="com.erbao.joystar.moudule.home.activity.ModifypasswordActivity">

    <include
        layout="@layout/handview1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"></include>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@mipmap/toumingw"
        android:orientation="vertical"
        android:paddingLeft="15dp"
        android:paddingRight="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/lin_size"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/phones"
                android:textColor="@color/color_Blackfont"
                android:textSize="15dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
              android:gravity="center_vertical"
                android:paddingLeft="10dp"
                android:id="@+id/modify_phone"
                android:text="170..."
                android:textColor="@color/color_Blackfont"
                android:textSize="15dp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.2dp"
            android:background="@color/color_Gray3"></View>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/lin_size"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/Verification_codes"
                android:textColor="@color/color_Blackfont"
                android:textSize="15dp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@null"
                android:inputType="number"
                android:hint="@string/edtcode"
                android:textColor="@color/color_Blackfont"
                android:paddingLeft="10dp"
                android:id="@+id/modify_code"
                android:textColorHint="@color/color_Gray"
                android:textSize="15dp" />

            <View
                android:layout_width="0.2dp"
                android:layout_height="match_parent"
                android:background="@color/color_Gray3"></View>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1.5"
                android:gravity="center"
                android:id="@+id/modify_getcode"
                android:text="@string/Get_code"
                android:textColor="@color/color_Blackfont"
                android:textSize="15dp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.2dp"
            android:background="@color/color_Gray3"></View>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/lin_size"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/new_passwords"
                android:textColor="@color/color_Blackfont"
                android:textSize="15dp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:hint="@string/enter_new_password"
                android:id="@+id/modify_password"
                android:paddingLeft="10dp"
                android:textColor="@color/color_Blackfont"
                android:textColorHint="@color/color_Gray"
                android:textSize="15dp" />
        </LinearLayout>


    </LinearLayout>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/lin_size"
        android:layout_marginTop="30dp"
        android:background="@mipmap/toumingw"
        android:gravity="center"
        android:id="@+id/modify_comple"
        android:text="@string/confirm"
        android:textColor="@color/color_Blackfont"
        android:textSize="15dp" />


</LinearLayout>
