<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/setupbg"
    android:orientation="vertical"
    tools:context="com.erbao.joystar.moudule.start.activity.LoginActivity">

    <include layout="@layout/handview1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">  </include>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        >

        <EditText
            android:layout_width="match_parent"
            android:layout_height="@dimen/lin_size"
            android:background="@null"
            android:hint="@string/phone"
            android:id="@+id/login_phone"
            android:paddingLeft="5dp"
            android:textColorHint="@color/color_Gray2"
            android:textSize="15dp"
            android:textColor="@color/color_Blackfont"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/color_setupline"></View>
         <EditText
            android:layout_width="match_parent"
            android:layout_height="@dimen/lin_size"
            android:background="@null"
            android:hint="@string/loginpassword"
             android:id="@+id/login_password"
            android:paddingLeft="5dp"
            android:textColorHint="@color/color_Gray2"
            android:textSize="15dp"
            android:textColor="@color/color_Blackfont"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/color_setupline"></View>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/lin_size">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textColor="@color/color_setupline"
                android:gravity="center_vertical"
                android:textSize="15dp"
                android:id="@+id/login_forgotpassword"
                android:text="@string/foegetpassword"
                />
            <TextView
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:textColor="@color/color_setupline"
                android:gravity="center|end"
                android:textSize="15dp"
                android:id="@+id/login_register"
                android:text="@string/register"
                android:layout_alignParentRight="true"
                />

        </RelativeLayout>



        <TextView
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:text="@string/Login"
            android:textColor="@color/color_White"
            android:textSize="15dp"
            android:id="@+id/login_login"
            android:gravity="center"
            android:background="@drawable/bg_edittext_normalll"
            />






        <ImageView
            android:layout_width="80dp"
            android:layout_marginTop="30dp"
            android:layout_height="80dp"
            android:src="@mipmap/wechat"
            android:id="@+id/login_wechat"
            android:layout_marginBottom="50dp"
            />



    </LinearLayout>





</LinearLayout>
