<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@drawable/bg_edittext_normalww"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginLeft="18dp"
                android:src="@mipmap/tuichu" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/Are_you_sure_to_quit"
                android:textColor="@color/color_Blackfont"
                android:textSize="18dp" />

        </LinearLayout>

<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="30dp"
    android:layout_alignParentRight="true"
    android:orientation="horizontal"
    android:layout_marginRight="10dp"
    android:layout_marginBottom="10dp"
    android:layout_alignParentBottom="true"
    >


    <TextView
        android:layout_width="80dp"
        android:layout_height="match_parent"
        android:gravity="center"
        android:textColor="@color/color_main"
        android:textSize="15dp"
        android:text="@string/cancel"
        android:id="@+id/lotout_cancel"
        />

    <TextView
        android:layout_width="80dp"
        android:layout_height="match_parent"
        android:textColor="@color/color_main"
        android:textSize="15dp"
        android:gravity="center"
        android:text="@string/confirm"
        android:id="@+id/lotout_confim"
        />

</LinearLayout>
    </RelativeLayout>

</LinearLayout>
